tests/test_assets/semantic/invalid/expressions/f32_ieee754_oracles.expected
semantic error at line 31: duplicate switch case
semantic error at line 39: duplicate switch case
semantic error at line 47: duplicate switch case
semantic error at line 55: duplicate switch case
semantic error at line 63: duplicate switch case
5 semantic errors generated.
